--- a/extensionDirectory/filings.css
+++ b/extensionDirectory/filings.css
@@ -403,6 +403,32 @@ p.filing-dated-city {
     width: 100%;
     text-align: center;
 }
+.date-list  {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+}
+
+.pill {
+    text-align: center;
+    width: 150px;
+    font-size:0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.pill.pill--rounded {
+    border-radius: 500px;
+    margin: 0;
+    padding: 0;
+    margin-right: 5px;
+    padding: 0px 5px 0px 5px;
+}
+
+.pill.pill--outline-black {
+    border: 2px solid #555;
+    color: #555;
+    background-color: transparent;
+}
 
 @media screen {
     body {
