--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -1,347 +1,338 @@
-
 body {
-    width: 475px;
-    min-height:400px;
-    height:auto;
-    box-sizing: border-box;
+  width: 475px;
+  min-height: 400px;
+  height: auto;
+  box-sizing: border-box;
 }
 
 body:before {
-    content:"";
-        border: 2px solid grey;
-        position: fixed;
-        top:0;
-        left:0;
-        right:0;
-        bottom:0;
-        z-index: 1000;
-        pointer-events: none;
-
+  content: '';
+  border: 2px solid grey;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  pointer-events: none;
 }
 button {
-    outline: none;
+  outline: none;
 }
 
-.pet-label,.pet-details {
-    margin: 0;
+.pet-label,
+.pet-details {
+  margin: 0;
 }
 
-#edit-petitioner{
-    margin-left: 20px;
-    height: 30px;
+#edit-petitioner {
+  margin-left: 20px;
+  height: 30px;
 }
 .pet-item .btn {
-    padding:0 1rem;
+  padding: 0 1rem;
 }
 .pet-detail {
-    padding: 0px 5px 0px 5px;
-    word-break: break-all;
-    width:60%;
+  padding: 0px 5px 0px 5px;
+  word-break: break-all;
+  width: 60%;
 }
 p.pet-detail {
-    margin:0;
+  margin: 0;
 }
 .pet-item {
-    display: flex;
-    margin-top: 5px;
-    align-items: baseline;
+  display: flex;
+  margin-top: 5px;
+  align-items: baseline;
 }
 
 .pet-label {
-    width: 100px;
-    padding-left: 15px;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: Helvetica, Arial, sans-serif;
+  width: 100px;
+  padding-left: 15px;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-
-
-
-.pet-detail[contenteditable=true] {
-    outline:1px solid black;
+.pet-detail[contenteditable='true'] {
+  outline: 1px solid black;
 }
 .count-cards {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .accordion {
-    white-space: normal;
-    text-decoration: none !important;
+  white-space: normal;
+  text-decoration: none !important;
 }
 
 .empty-state {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    /* position:fixed; */
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    top:0;
-    left:0;
-    border: 2px solid grey;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  /* position:fixed; */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  border: 2px solid grey;
 }
 .inset {
-    padding-left:2px;
-    padding-right:2px;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 #bottomText {
-    position: relative;
-    font-size:0.75rem;
-    z-index: 100;
+  position: relative;
+  font-size: 0.75rem;
+  z-index: 100;
 }
 
 .popTop {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 #defendantInfo {
-    width: 70%;
+  width: 70%;
 }
 
 #logoDiv {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: flex-start;
-    align-items: center;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: flex-start;
+  align-items: center;
+  width: 25%;
 }
 
 #logoDiv .logos {
-    width: 50px;
+  width: 50px;
 }
 
 #logoDivCover {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    text-align: center;
-    width: 100%;
-    margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  text-align: center;
+  width: 100%;
+  margin-top: 40px;
 }
 
 #mainButtonDiv {
-    position: relative;
-    z-index: 0;
+  position: relative;
+  z-index: 0;
 }
 
 #code4btv {
-    width: 20%;
-    height: 20%;
-    display: block;
-    margin-left: 100px;
-    margin-right: auto;
+  width: 20%;
+  height: 20%;
+  display: block;
+  margin-left: 100px;
+  margin-right: auto;
 }
 
 #legal-aid {
-    width: 40%;
-    height: 40%;
-    display: block;
-    margin-left: auto;
-    margin-right: 60px;
+  width: 40%;
+  height: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: 60px;
 }
 
-
 #introText {
-    margin-top: 10px;
-    width: 80%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border:1px solid grey;
+  margin-top: 10px;
+  width: 80%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid grey;
 }
 
 .card-header__disposition-date {
-    white-space: nowrap;
-    font-size: 14px;
+  white-space: nowrap;
+  font-size: 14px;
 }
 
 .title-page__link {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 70%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 70%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 #vtCourtsOnlineA {
-    position: relative;
-    z-index: 99;
+  position: relative;
+  z-index: 99;
 }
 
 .section-label {
-    margin: 5px 10px;
-    font-weight: bold;
+  margin: 5px 10px;
+  font-weight: bold;
 }
 
 hr {
-    margin-top: 2px !important;
+  margin-top: 2px !important;
 }
 
 .dates-box {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .single-date {
-    outline: 1px solid blue;
-    padding: 2px;
+  outline: 1px solid blue;
+  padding: 2px;
 }
 
-
-
 .card-body {
-    padding: 2px !important;
-    font-size: 14px;
-    font-family: Helvetica, Arial, sans-serif;
+  padding: 2px !important;
+  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .card-body p {
-    display: flex;
-    flex-direction: row;
-    margin: 1px !important;
+  display: flex;
+  flex-direction: row;
+  margin: 1px !important;
 }
 
-.card-body .table th, .card-body .table td {
-    padding: 4px;
+.card-body .table th,
+.card-body .table td {
+  padding: 4px;
 }
 
 .clear-data {
-    width: 100px;
-    margin-bottom: 3px;
-    margin: 10px 5px 10px 5px;
-    align-self: center;
+  width: 100px;
+  margin-bottom: 3px;
+  margin: 10px 5px 10px 5px;
+  align-self: center;
 }
 .reset-settings {
-    font-weight: 500;
-    color:#777777;
-    cursor: pointer;
+  font-weight: 500;
+  color: #777777;
+  cursor: pointer;
 }
 .reset-settings:hover {
-    color:#222222;
-
+  color: #222222;
 }
 .button-div {
-    display:flex;
-    flex-direction: row;
-    width: auto;
-    justify-content: center;
-    margin: 25px 10px 5px 10px;  
-    text-align: center;
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  justify-content: center;
+  margin: 25px 10px 5px 10px;
+  text-align: center;
 }
 
-.button-div button{
-    margin: 5px;
+.button-div button {
+  margin: 5px;
 }
 
 .add-docket-info {
-    width: 158px;
+  width: 158px;
 }
 
 .create-documents {
-    width: 250px;
+  width: 250px;
 }
 
 /* Count Cards */
 .card {
-    margin-bottom:0.5rem;
+  margin-bottom: 0.5rem;
 }
 .card .card-header {
-    padding:0.5rem;
-    -webkit-appearance:none;
-    cursor: pointer;
-
+  padding: 0.5rem;
+  -webkit-appearance: none;
+  cursor: pointer;
 }
 .card-header__column {
-    position: relative;
-    display:flex;
-    flex-direction: column;
-    width:100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 .card-header__title-row {
-    position: relative;
-    display:flex;
-    flex-direction: row;
-    align-content: stretch;
-    justify-content: space-between;
-    width:100%;
-    text-align: left;
-    margin-bottom:0.5rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-content: stretch;
+  justify-content: space-between;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 0.5rem;
 }
 .card-header__title-row p {
-    margin-bottom:0;
+  margin-bottom: 0;
 }
 .card-header__title-row .btn {
-    white-space: normal;
-    text-align: left;
-    padding:0;
+  white-space: normal;
+  text-align: left;
+  padding: 0;
 }
 .card-header__meta-data {
-    width:55%;
-    hyphens: auto;
+  width: 55%;
+  hyphens: auto;
 }
 .card-header__select {
-    width:45%;
-    margin-left:0.5rem;
+  width: 45%;
+  margin-left: 0.5rem;
 }
 .card-header__select select {
-    width:100%;
+  width: 100%;
 }
 
 .card-header__bottom-row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .card-header__pills-row {
-    display: flex;
-    flex-direction: row;
-    width: 95%;
-    margin: 0;
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  margin: 0;
 }
 .card-header__bottom-row i {
-    color: Red;
+  color: Red;
 }
 
-
 .card-header__description {
-    text-decoration: none !important;
-    color:black !important;
+  text-decoration: none !important;
+  color: black !important;
 }
 
 .card-header__description.btn-link:hover {
-    text-decoration: none !important;
-    color:black !important;
+  text-decoration: none !important;
+  color: black !important;
 }
 
 /* Pills */
 
 .pill {
-    min-width: 50px;
-    font-size:0.75rem;
-    font-weight: bold;
-    text-transform: uppercase;
+  min-width: 50px;
+  font-size: 0.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .pill.pill--rounded {
-    border-radius: 500px;
-    margin: 0;
-    padding: 0;
-    margin-right: 5px;
-    padding: 0px 5px 0px 5px;
+  border-radius: 500px;
+  margin: 0;
+  padding: 0;
+  margin-right: 5px;
+  padding: 0px 5px 0px 5px;
 }
 
 .pill.pill--outline-green {
-    border: 2px solid #2FA54A;
-    color: #2FA54A;
-    background-color: transparent;
+  border: 2px solid #2fa54a;
+  color: #2fa54a;
+  background-color: transparent;
 }
 
 .pill.pill--outline-black {
-    border: 2px solid #555;
-    color: #555;
-    background-color: transparent;
+  border: 2px solid #555;
+  color: #555;
+  background-color: transparent;
 }
