--- a/extensionDirectory/filings.css
+++ b/extensionDirectory/filings.css
@@ -394,11 +394,25 @@ p.filing-dated-city {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-/* Use this with a span full of non-breaking spaces to give it a solid fill-in underline */
+
+/* Use "fill-in" for a solid underline where people need to fill in 
+ * information. Use one of the cascading modifiers to get the desired width. 
+ */
 .fill-in {
-  opacity: 1;
-  position: relative;
   border-bottom: 1.5px solid #000;
+  display: inline-block;
+}
+.fill-in.half-width {
+  width: 360px;
+}
+.fill-in.quarter-width {
+  width: 180px;
+}
+.fill-in.word-width {
+  width: 100px;
+}
+.fill-in.digit-width {
+  width: 40px;
 }
 
 /* CHeckout sheet */
