--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -336,3 +336,13 @@ hr {
   color: #555;
   background-color: transparent;
 }
+.popup-edition-wrap {
+  width:100%;
+}
+.popup-edition {
+  margin:15px auto 0px auto;
+  width:70%;
+  text-align: center;
+  border: 2px solid black;
+  font-weight: 800;
+}
