--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -346,3 +346,13 @@ hr {
   border: 2px solid black;
   font-weight: 800;
 }
+
+.donate-box {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.donate {
+  margin: auto !important;
+}
