--- a/extensionDirectory/filings.css
+++ b/extensionDirectory/filings.css
@@ -729,20 +729,31 @@ p.filing-dated-city {
   font: 1.5em bold;
   margin: 0 3px 0 3px;
 }
-.fee-box input {
-  width: 150px;
+.fee-row input {
+  width: 100px;
 }
 .fee-row {
   display: flex;
   flex-direction: row;
   margin: 3px;
 }
-.fee-box {
-  width: 350px;
-  border: 1px solid black;
-  margin: auto;
+.disable-box {
+  /* all: unset; */
+  background-color: #656a70 !important;
 }
 
+.fee-check-box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: 20px auto 0 auto;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.fee-check-box span {
+  margin: 5px 15px 5px 10px;
+}
 .consolidate-options label {
   display: flex;
   flex-direction: column;
@@ -755,3 +766,112 @@ p.filing-dated-city {
   flex-direction: row;
   margin: 10px 0 0 0;
 }
+
+.form-check {
+  display: flex;
+  flex-direction: row;
+}
+
+.switch_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+/* Switch 4 Specific Style Start */
+
+.form-check-label {
+  text-align: center;
+  width: 100%;
+}
+
+.input_wrapper {
+  width: 80px;
+  height: 40px;
+  position: relative;
+  cursor: pointer;
+}
+
+.input_wrapper input[type='checkbox'] {
+  width: 80px;
+  height: 40px;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: #315e7f;
+  border-radius: 2px;
+  position: relative;
+  outline: 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.input_wrapper input[type='checkbox']:after {
+  position: absolute;
+  content: '';
+  top: 3px;
+  left: 3px;
+  width: 34px;
+  height: 34px;
+  background: #dfeaec;
+  z-index: 2;
+  border-radius: 2px;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.input_wrapper svg {
+  position: absolute;
+  top: 50%;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  fill: #fff;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  z-index: 1;
+}
+
+.input_wrapper .is_checked {
+  width: 18px;
+  left: 18%;
+  -webkit-transform: translateX(190%) translateY(-30%) scale(0);
+  transform: translateX(190%) translateY(-30%) scale(0);
+}
+
+.input_wrapper .is_unchecked {
+  width: 15px;
+  right: 10%;
+  -webkit-transform: translateX(0) translateY(-30%) scale(1);
+  transform: translateX(0) translateY(-30%) scale(1);
+}
+
+/* Checked State */
+.input_wrapper input[type='checkbox']:checked {
+  background: #23da87;
+}
+
+.input_wrapper input[type='checkbox']:checked:after {
+  left: calc(100% - 37px);
+}
+
+.input_wrapper input[type='checkbox']:checked + .is_checked {
+  -webkit-transform: translateX(0) translateY(-30%) scale(1);
+  transform: translateX(0) translateY(-30%) scale(1);
+}
+
+.input_wrapper input[type='checkbox']:checked ~ .is_unchecked {
+  -webkit-transform: translateX(-190%) translateY(-30%) scale(0);
+  transform: translateX(-190%) translateY(-30%) scale(0);
+}
+
+/* Switch 4 Specific Style End */
