--- a/extensionDirectory/popup.css
+++ b/extensionDirectory/popup.css
@@ -376,6 +376,8 @@ hr {
 }
 
 .popup-edition-sub {
+  width: 90%;
+  margin: auto;
   text-align: center;
   color: #4d99d3;
   font-style: italic;
@@ -389,4 +391,76 @@ hr {
 
 .donate {
   margin: auto !important;
+}
+
+.asterisk {
+  position: absolute;
+  font-size: 100px;
+  left: 110px;
+  top: 15px;
+  color: red;
+  font-weight: 900;
+  opacity: .7;
+}
+
+.asterisk-text {
+  width: 100%;
+  height: 20%;
+  display: block;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.checkbox-input {
+  position: absolute;
+  left: 10px;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  height: 25px;
+  width: 25px;
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+.checkbox-container:hover .checkmark {
+  background-color: #bbb;
+}
+
+.checkbox-input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkbox-container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
 }
