--- a/extensionDirectory/static/filings.css
+++ b/extensionDirectory/static/filings.css
@@ -1,4 +1,4 @@
-/* Helpers */
+/* Helpers ----------------*/
 
 .indent {
   text-indent: 2em;
@@ -587,6 +587,9 @@ p.filing-dated-city {
     padding-left: 0.25in;
     padding-right: 0.25in;
   }
+  .page:last-child {
+    page-break-after: avoid !important; 
+  }
   .count-table + p {
     padding-top: 0.5rem;
   }
@@ -691,6 +694,7 @@ p.filing-dated-city {
 /*manage-counts page*/
 .edit-count {
   border: 1px solid #ddd;
+  background: #afcef0;
   padding: 30px;
   border-radius: 5px;
   position: relative;
